--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,123 @@
-<kendo-grid
-  [data]="gridView"
-  [height]="533"
-  [pageSize]="pageSize"
-  [skip]="skip"
-  [pageable]="true"
-  [sortable]="true"
-  (edit)="editHandler($event)"
-  (cancel)="cancelHandler($event)"
-  (save)="saveHandler($event)"
-  (remove)="removeHandler($event)"
-  (add)="addHandler($event)"
-  (pageChange)="pageChange($event)"
-  [navigable]="true"
->
-  <ng-template kendoGridToolbarTemplate>
-    <button kendoGridAddCommand>Add new</button>
-  </ng-template>
-  <kendo-grid-column field="id" title="ID"></kendo-grid-column>
-  <kendo-grid-column field="name" title="Name" width="220"></kendo-grid-column>
-  <kendo-grid-column field="gender" title="Gender" width="200">
-    <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
-      <!-- <kendo-dropdownlist
-        [data]="genderItems"
-        textField="name"
-        valueField="id"
-        [(ngModel)]="dataItem.gender"
-      ></kendo-dropdownlist> -->
-    </ng-template>
-  </kendo-grid-column>
-  <kendo-grid-column
-    field="address"
-    title="Address"
-    width="220"
-  ></kendo-grid-column>
-  <kendo-grid-column field="mobile" title="Mobile No"></kendo-grid-column>
-  <kendo-grid-column field="dob" title="Date of Birth" width="230">
-    <ng-template kendoGridCellTemplate let-dataItem>
-      {{ dataItem.dob | date: 'EEEE, MMM d, y' }}
-      <!-- <kendo-datepicker [(value)]=></kendo-datepicker> -->
-    </ng-template>
-  </kendo-grid-column>
-  <kendo-grid-column field="age" title="age" width="75"></kendo-grid-column>
+<div class="example-config text-center font-weight-bold">
+  Student List
+  <div class="row mt-4">
+    <div class="col-auto">
+      <label>Select (xlsx,xls) file</label>
+    </div>
+    <div class="col-auto">
+      <input
+        id="fileInput"
+        #fileInputRef
+        type="file"
+        name="select"
+        (change)="selectFile($event)"
+        accept=".xlsx,.xls"
+      />
+    </div>
+    <div class="col-1">
+      <button
+        kendoButton
+        (click)="uploadFile()"
+        kendo-button
+        look="outline"
+        [disabled]="!isValidFile || isLoading"
+      >
+        Upload
+      </button>
+    </div>
+    <div class="k-block" *ngIf="isLoading">
+      <kendo-loader></kendo-loader>
+    </div>
+  </div>
 
-  <kendo-grid-command-column title="command" width="220">
-    <ng-template kendoGridCellTemplate let-isNew="isNew">
-      <button kendoGridEditCommand>Edit</button>
-      <button kendoGridRemoveCommand [primary]="true">Remove</button>
-      <button kendoGridSaveCommand [disabled]="formGroup?.invalid">
-        {{ isNew ? 'Add' : 'Update' }}
-      </button>
-      <button kendoGridCancelCommand>
-        {{ isNew ? 'Discard changes' : 'Cancel' }}
-      </button>
-    </ng-template>
-  </kendo-grid-command-column>
-</kendo-grid>
+  <div class="row" *ngIf="!isValidFile">
+    <div class="col-3 text-danger text-right">
+      <label>Invalid file type</label>
+    </div>
+  </div>
+  <div class="row mt-4">
+    <kendo-grid
+      [data]="view | async"
+      [height]="533"
+      [pageSize]="gridState.take"
+      [skip]="gridState.skip"
+      [sort]="gridState.sort"
+      [pageable]="true"
+      [sortable]="true"
+      (dataStateChange)="onStateChange($event)"
+      (edit)="editHandler($event)"
+      (cancel)="cancelHandler($event)"
+      (save)="saveHandler($event)"
+      (remove)="removeHandler($event)"
+      (add)="addHandler($event)"
+      [navigable]="true"
+    >
+      <ng-template kendoGridToolbarTemplate>
+        <button kendoGridAddCommand>Add new</button>
+      </ng-template>
+      <kendo-grid-column field="id" title="Id"></kendo-grid-column>
+      <kendo-grid-column
+        field="name"
+        title="Name"
+        width="220"
+      ></kendo-grid-column>
+
+      <kendo-grid-column
+        field="gender"
+        title="Gender"
+        editor="dropdown"
+        width="200"
+      >
+        <ng-template kendoGridCellTemplate let-dataItem>
+          {{ getGender(dataItem.gender)?.name }}
+        </ng-template>
+        <ng-template
+          kendoGridEditTemplate
+          let-dataItem="dataItem"
+          let-formGroup="formGroup"
+        >
+          <kendo-dropdownlist
+            [data]="genderItems"
+            textField="name"
+            valueField="id"
+            [valuePrimitive]="true"
+            [formControl]="formGroup.get('gender')"
+          ></kendo-dropdownlist>
+        </ng-template>
+      </kendo-grid-column>
+      <kendo-grid-column
+        field="address"
+        title="Address"
+        width="220"
+      ></kendo-grid-column>
+      <kendo-grid-column field="mobile" title="Mobile No"></kendo-grid-column>
+      <kendo-grid-column
+        field="dob"
+        title="Date of Birth"
+        width="230"
+        editor="date"
+      >
+        <ng-template kendoGridCellTemplate let-dataItem>
+          {{ dataItem.dob | date: 'EEEE, MMM d, y' }}
+        </ng-template>
+      </kendo-grid-column>
+      <kendo-grid-column field="age" title="age" width="75"></kendo-grid-column>
+
+      <kendo-grid-command-column title="Action" width="220">
+        <ng-template kendoGridCellTemplate let-isNew="isNew">
+          <button kendoGridEditCommand>Edit</button>
+          <button kendoGridRemoveCommand [primary]="true">Remove</button>
+          <button kendoGridSaveCommand [disabled]="formGroup?.invalid">
+            {{ isNew ? 'Add' : 'Update' }}
+          </button>
+          <button kendoGridCancelCommand>
+            {{ isNew ? 'Discard changes' : 'Cancel' }}
+          </button>
+        </ng-template>
+      </kendo-grid-command-column>
+    </kendo-grid>
+  </div>
+</div>
 
 <kendo-dialog
   title="Please confirm"
@@ -64,7 +127,7 @@
   [width]="450"
 >
   <p style="margin: 30px; text-align: center;">
-    Are you sure you want to delete {{ selectedStudent.name }}?
+    Are you sure you want to delete '{{ selectedStudent.name }}' ?
   </p>
   <kendo-dialog-actions>
     <button kendoButton (click)="closeDialog()">No</button>
